2008-12-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Fix too ambitious auto tag closing in HTML files inside embedded
   scripting languages.
   Complete HTML styles in is_comment_style() and is_string_style().
 * src/callbacks.c, src/callbacks.h:
   Remove dead code.
 * src/editor.c, src/document.c:
   Remove remaining uses of doc->editor and use GeanyEditor directly.
 * wcript, src/build.c, src/callbacks.c, src/dialogs.c, src/document.c,
   src/encodings.c, src/filetypes.c, src/keybindings.c, src/keyfile.c,
   src/main.c, src/Makefile.am, src/makefile.win32, src/msgwindow.c,
   src/plugindata.c, src/plugins.c, src/prefs.c, src/project.c,
   src/search.c, src/support.c, src/support.h, src/templates.c,
   src/toolbar.c, src/tools.c, src/treeviews.c, src/ui_utils.c,
   src/vte.c:
   Move implementation of lookup_widget() into ui_lookup_widget().
   Change uses of lookup_widget() to ui_lookup_widget().
   Remove now unneeded support.c.
   Use GLib gettext macros in support.h instead of own ones.


2008-12-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/html.c:
   Also parse headings with tags inside header tag.
 * src/plugins.c:
   On quitting, sort list of active plugins by plugin name.


2008-12-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keyfile.c:
   Fix broken session file support on Windows.
 * doc/geany.txt, doc/geany.html:
   Retitle the Terminal/VTE preferences tab section.
   Change (again) the key combinations for creating
   rectangular selections.
 * doc/Doxyfile.in, doc/plugins.dox, plugins/demoplugin.c, src/editor.c,
   src/editor.h, src/document.c, src/geanyobject.c, src/geanyobject.h,
   src/geany.h, src/plugindata.h:
   Add "editor-notify" to the plugin API.
   This signal is emitted whenever something in an editor widget
   changes, e.g. a character was typed.
 * src/editor.c:
   Make Ctrl-click working again to create rectangular selections when