@@ -1,3 +1,10 @@
+2008-12-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/symbols.c, tagmanager/fortran.c:
+   Use plurals for HTML symbol list parent items.
+   Fix Fortran Types showing as Interfaces in the symbol list.
+
+
 2008-12-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/editor.c:
